# WebServer

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  WebServer.sln
WebServer/: AppStart.cpp  WebServer.h  WebServer.vcxproj  WebServer.vcxproj.filters  test.html
WebServer/BL/: Parser.cpp  Parser.h
WebServer/Server/: Server.cpp  Server.h
WebServer/Utils/: Header.h  HtmlResponse.cpp  HtmlResponse.h  RegularExpressions.h  Request.cpp  Request.h
WebServer/Utils/Request/: Request.cpp  Request.h
WebServer/src/include/: BaseView.h  CommonMacros.h  Header.h  HtmlResponse.h  HttpParser.h  HttpRequest.h  HttpResponse.h  HttpServer.h  Parser.h  RegularExpressions.h  RequestMacros.h  ServerMacros.h  SimpleDB.h  View.h  headers.h  server.h  view.h
WebServer/src/parser/: HttpParser.cpp  Parser.cpp  RequestParser.cpp  ResponseParser.cpp  ServerParser.cpp  request_parser.cpp  server_parser.cpp
WebServer/src/request/: request.cpp
WebServer/src/response/: response.cpp
WebServer/src/server/: HttpServer.cpp  Server.cpp  server.cpp
WebServer/test/: test.cpp  test.h  test.html
demo_app/: app_start.cpp  demo.h  demo.html
demo_app/static/: styles.css
src/include/: application.h  headers.h  logger.h  regexpr.h  request.h  response.h  server.h
src/parser/: request_parser.cpp  response_parser.cpp  server_parser.cpp
src/request/: request.cpp
src/response/: response.cpp
src/server/: server.cpp
src/utils/: application.cpp  logger.cpp  urls.cpp
web_server/: app_start.cpp
web_server/demo/: demo.h
web_server/test/: test.cpp  test.h  test.html
(+34 files in other folders)
